# trilha-python-dio

./: Cyrbr  DatabaseDrims.sql  Funcionarios.sql  Otimizando o Sistema Bancário com Funções Python  README.md  Salario.sql  Testes_indivisuais  aula1_desafio_criando_sistema_bancario.py  aula2_desafio_otimizando_sistema_bancario.py  cargo.sql  cargonivel.sql  cep.sql  clone Dio.py  contaBancaria  cpf.sql  datadrims.compose.yaml  desafio.py  desafio_2.py  desafio_movto_bancario.ipynb  desafio_v1.py  endereco.sql  estado.sql  jogadores.sql  lab1_sistema_bancario_aor.py  lab2_sistema_bancario_otimizado_aor.py  lab3-4_sistema_bancario_poo.py  operadores_de_identidade.md  projetim 2.py  projetim.py  prymos.md  sexo  temp.py  thaty-ane.py
00 - Fundamentos/: Cyrbr  MemariaFerreira.py  (+40 more)
06 - Gerenciamento de pacotes e boas práticas/: 01_boas_praticas.py  pyproject.toml
06 - Gerenciamento de pacotes e boas práticas/desafio/: desafio_v1.py  desafio_v2.py
11 - Desenvolvimento de APIs com Flask/desafio/: .gitignore  pyproject.toml
11 - Desenvolvimento de APIs com Flask/desafio/migrations/versions/: 0e07d3013f88_initial_migration.py
11 - Desenvolvimento de APIs com Flask/desafio/src/: app.py  config.py
11 - Desenvolvimento de APIs com Flask/desafio/src/controllers/: account.py  user.py
11 - Desenvolvimento de APIs com Flask/desafio/src/models/: __init__.py  account.py  base.py  user.py
11 - Desenvolvimento de APIs com Flask/desafio/src/services/: account.py  user.py
11 - Desenvolvimento de APIs com Flask/desafio/src/views/: account.py  user.py
12 - Desenvolvimento fullstack com Django/desafio/: db.sqlite3  pyproject.toml
12 - Desenvolvimento fullstack com Django/desafio/cards/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
12 - Desenvolvimento fullstack com Django/desafio/cards/migrations/: 0001_initial.py
12 - Desenvolvimento fullstack com Django/desafio/config/: asgi.py  settings.py  urls.py  wsgi.py
12 - Desenvolvimento fullstack com Django/desafio/templates/: base.html  home.html
12 - Desenvolvimento fullstack com Django/desafio/templates/registration/: login.html
12 - Desenvolvimento fullstack com Django/mysite/: .gitignore  build.sh  pyproject.toml
12 - Desenvolvimento fullstack com Django/mysite/accounts/: urls.py  views.py
12 - Desenvolvimento fullstack com Django/mysite/config/: admin.py  asgi.py  settings.py  urls.py  wsgi.py
12 - Desenvolvimento fullstack com Django/mysite/contacts/: apps.py  forms.py  models.py  urls.py  views.py
12 - Desenvolvimento fullstack com Django/mysite/contacts/migrations/: 0001_initial.py
12 - Desenvolvimento fullstack com Django/mysite/polls/: admin.py  apps.py  models.py  urls.py  views.py
13 - APIs Assíncronas com FastAPI/desafio/: .env.example  .gitignore  README.md  pyproject.toml
13 - APIs Assíncronas com FastAPI/desafio/migrations/: env.py
13 - APIs Assíncronas com FastAPI/desafio/src/: exceptions.py  main.py  security.py
13 - APIs Assíncronas com FastAPI/dio-blog/: .env.example  README.md  pyproject.toml  render-deploy.sh
13 - APIs Assíncronas com FastAPI/dio-blog/migrations/: env.py
13 - APIs Assíncronas com FastAPI/dio-blog/src/: config.py  database.py  exceptions.py  main.py  security.py
13 - APIs Assíncronas com FastAPI/dio-blog/tests/: conftest.py
(+223 files in other folders)
