[tool.poetry]
name = "desafio"
version = "0.1.0"
description = ""
authors = ["Guilherme Carvalho <gui.ifsp11@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "*"
django-widget-tweaks = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
