[tool.poetry]
name = "dio-blog"
version = "0.1.0"
description = ""
authors = ["Guilherme Carvalho <gui.ifsp11@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "*"
uvicorn = { extras = ["standard"], version = "^0.29.0" }
databases = {version = "*", extras = ["aiosqlite", "asyncpg"]}
pyjwt = "*"
psycopg2-binary = "*"
pydantic-settings = "*"
alembic = "*"


[tool.poetry.group.dev.dependencies]
pytest-asyncio = "*"
pytest = "*"
httpx = "*"
pytest-mock = "*"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
